--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "ip": "lovelak.aternos.me",
-  "port": 44055,
-  "name": "Subscribe",
+  "ip": "server.banglaverse.net",
+  "port": 25568,
+  "name": "Mobfarmbot",
   "version": "1.21.4"
 }
